--- a/page/package.json
+++ b/page/package.json
@@ -32,7 +32,6 @@
     "express": "^4.16.3",
     "foundation-sites": "^6.4.3",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0",
-    "requirejs": "^2.3.5"
+    "node-sass-middleware": "0.11.0"
   }
 }
