--- a/page/package.json
+++ b/page/package.json
@@ -36,8 +36,11 @@
     }
   },
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "foundation-sites": "^6.4.3",
+    "i18n": "^0.8.3",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "pug": "^2.0.3"
