--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Please refer to the [wiki](https://github.com/tracking-exposed/krgotrex/wiki) for additional information.",
   "author": "Tracking Exposed",
-  "license": "CC-BY",
+  "license": "GPL-3.0",
   "main": "./js/main.js",
   "scripts": {
     "start": "DEBUG=krgotrex:* node ./bin/www"
@@ -43,6 +43,7 @@
     "i18n": "^0.8.3",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "reveal.js": "^3.7.0"
   }
 }
