reveal.js is back

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ package-lock.json
 page/package-lock.json
 .vscode
 osm/*
+
+web-accessible/css/
+web-accessible/js/
+web-accessible/lib/
+web-accessible/plugin/
