--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-session": "^1.15.6",
     "foundation-sites": "^6.4.3",
     "i18n": "^0.8.3",
+    "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "pug": "^2.0.3",
