--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "i18n": "^0.8.3",
     "jsdom": "^13.0.0",
     "lodash": "^4.17.11",
+    "lunr": "^2.3.5",
     "morgan": "~1.9.0",
     "reveal.js": "^3.7.0",
     "xml2json": "^0.11.2"
