small change on package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git://github.com/tracking-exposed/krgotrex.git"
   },
   "keywords": [
-    "tracking",
+    "web tracking resistance",
     "überwachung",
     "google campus",
     "berlin",
