--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsdom": "^13.0.0",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
+    "node-gyp": "^3.8.0",
     "reveal.js": "^3.7.0",
     "xml2json": "^0.11.2"
   },
